@@ -14,6 +14,11 @@ Heads up!
 
 Bugfixes
 ~~~~~~~~
+- Fixed lang.Process::close() not to raise warnings when called twice
+  (friebe)
+- Fixed lang.Process::close() to raise a specialized exception if the 
+  process was retrieved by getByProcessId() instead of a NullPointer
+  (friebe)
 - Fixed bug #43 - peer.mail.store.Pop3Store connection error
   (friebe)
 - Fixed bug #45 - Setting Properties on a LogAppender fails
